--- a/leetcode/leetcode.vcxproj.filters
+++ b/leetcode/leetcode.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="BinaryTreePaths.cpp">
+    <ClCompile Include="FirstBadVersion.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
